--- a/index.html
+++ b/index.html
@@ -3,27 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="//code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
-    <link rel="stylesheet" href="/resources/demos/style.css">
-    <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
-    <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="/Assets/CSS/style.css">
     <title>Library of Congress Search Engine</title>
 </head>
 <body>
-    <div class="container text-center">
-        <div class="justfy-center flex-center">
-            <h1>Library of Congress Search Engine</h1>
-            <input class="input rounded">
-            <select class="form-select" aria-label="Default select example">
-                <option selected>Open this select menu</option>
-                <option value="1">One</option>
-                <option value="2">Two</option>
-                <option value="3">Three</option>
-              </select>
-              <button class="btn">Click Me</button>
+    <nav>
+        <ul>
+            <li><a href="/advisor.html">Trip Advisor</a></li>
+            <li><a href="/index.html">Home</a></li>
+            <li><a href="/weather.html">Weather</a></li>
+        </ul>
+    </nav>
+    <main>
+        <div class="container">
+            <div class="flex-center flex-column">
+                <h1>Welcome To Trip Planner!</h1>
+                <button>Get Started!</button>
+            </div>
         </div>
-    </div>
+        <div class="main"></div>
+    </main>
 </body>
 </html>
