added css and html changed css file name and deleted a html file

--- a/advisor.html
+++ b/advisor.html
@@ -3,9 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/assets/CSS/advisor.css">
     <title>Trip Advisor</title>
 </head>
 <body>
-    
+    <nav>
+        <ul>
+            <li><a href="index.html">Trip Planner</a></li>
+        </ul>
+    <main class="flex-center flex-column">
+        <div class="comtainer1">
+        <div class="weather" id="weatherapi">
+            <div id="weather-display" class="weather-display" aria-placeholder="place holder">
+
+            </div>
+        </div>
+    </div>
+        <div class="container2">
+        <div class="advisor" id="advisorapi">
+
+        </div>
+        </div>
+    </main>
+        <div class="main"></div>
 </body>
 </html>
