--- a/index.html
+++ b/index.html
@@ -3,15 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Assets/CSS/style.css">
-    <title>Library of Congress Search Engine</title>
+    <link rel="stylesheet" href="/Assets/CSS/index.css">
+    <title>Trip Planner</title>
 </head>
 <body>
     <nav>
         <ul>
-            <li><a href="/advisor.html">Trip Advisor</a></li>
-            <li><a href="/index.html">Home</a></li>
-            <li><a href="/weather.html">Weather</a></li>
+            <li><a href="/advisor.html">Trip Planner</a></li>
         </ul>
     </nav>
     <main>
