--- a/advisor.html
+++ b/advisor.html
@@ -26,5 +26,6 @@
         </div>
     </main>
         <div class="main"></div>
+    <script src="./assets/JS/script.js"></script>
 </body>
 </html>
