--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Assets/CSS/index.css">
+    <link rel="stylesheet" href="/assets/CSS/index.css">
     <title>Trip Planner</title>
 </head>
 <body>
