--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/CSS/index.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css" />
     <title>Trip Planner</title>
 </head>
 <body>
@@ -16,10 +17,34 @@
         <div class="container">
             <div class="flex-center flex-column">
                 <h1>Welcome To Trip Planner!</h1>
-                <button>Get Started!</button>
+                <button><a href="#ex1" rel="modal:open">Get Started!</a></button>
             </div>
         </div>
         <div class="main"></div>
+        
     </main>
+    <div id="ex1" class="modal">
+        <p>
+            <label>Where are you going?</label>
+            <input type="text" class="city">
+        </p>
+        <p>
+            <label>When are you arriving?</label>
+            <input type="text" class="tripStart">
+        </p>
+        <p>
+            <label>When are you returning home?</label>
+            <input type="text" class="tripEnd">
+        </p>
+        <br><button class="formSubmit" onclick="setValues()"><a href="./advisor.html">Submit</a></button>
+        <!-- <a href="#" rel="modal:close">Close</a> -->
+    </div>
+    <!-- Remember to include jQuery :) -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
+
+    <!-- jQuery Modal -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.js"></script>
+
+    <script src="./assets/JS/script.js"></script>
 </body>
 </html>
