added weather widget in advisor.html added modal to index.html with an issue to be fixed soon and also added some css to input/output.css

--- a/advisor.html
+++ b/advisor.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/assets/CSS/output.css">
+    <link rel="stylesheet" href="./assets/CSS/output.css">
     <title>Trip Advisor</title>
 </head>
 <body>
@@ -11,19 +11,50 @@
         <ul>
             <li><a href="index.html">Trip Planner</a></li>
         </ul>
-    <main class="flex-center flex-column">
-        <div class="comtainer1">
-        <div class="weather" id="weatherapi">
-            <div id="weather-display" class="weather-display" aria-placeholder="place holder">
-
+    <main>
+        <!--\/ weather api \/-->
+        <div class="max-w-7xl mx-auto  px-4 sm:px-6 lg:py-24 lg:px-8">
+            <h2 class="text-3xl tracking-tight text-white sm:text-4xl">Weather Predictions</h2>
+            <div class="grid grid-cols-1 gap-5 sm:grid-cols-4 mt-4">
+                <div class="bg-white overflow-hidden shadow sm:rounded-lg">
+                    <div class="px-4 py-5 sm:p-6">
+                        <dl>
+                            <dt class="text-sm leading-5 font-medium text-gray-500 truncate">Min Temp</dt>
+                            <dd id="Min-Temp" class="mt-1 text-3xl leading-9 font-semibold text-indigo-600">0</dd>
+                        </dl>
+                    </div>
+                </div>
+                <div class="bg-white overflow-hidden shadow sm:rounded-lg">
+                    <div class="px-4 py-5 sm:p-6">
+                        <dl>
+                            <dt class="text-sm leading-5 font-medium text-gray-500 truncate">Max Temp</dt>
+                            <dd id="Max-Temp" class="mt-1 text-3xl leading-9 font-semibold text-indigo-600">0</dd>
+                        </dl>
+                    </div>
+                </div>
+                <div class="bg-white overflow-hidden shadow sm:rounded-lg">
+                    <div class="px-4 py-5 sm:p-6">
+                        <dl>
+                            <dt class="text-sm leading-5 font-medium text-gray-500 truncate">Condition</dt>
+                            <dd id="Condition" class="mt-1 text-3xl leading-9 font-semibold text-indigo-600">NaN</dd>
+                        </dl>
+                    </div>
+                </div>
+                <div class="bg-white overflow-hidden shadow sm:rounded-lg">
+                    <div class="px-4 py-5 sm:p-6">
+                        <dl>
+                            <dt class="text-sm leading-5 font-medium text-gray-500 truncate">Sunset</dt>
+                            <dd id="Sunset" class="mt-1 text-3xl leading-9 font-semibold text-indigo-600">0:00</dd>
+                        </dl>
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
-        <div class="container2">
-        <div class="advisor" id="advisorapi">
-            
-        </div>
-        </div>
+        <!--/\ weather api widget /\-->
+
+        <!--\/ trip advisor api \/-->
+
+        <!--/\ trip advisor api /\-->
     </main>
         <div class="main"></div>
     <script src="./assets/JS/script.js"></script>
