--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         <div id="ex1" class="modal">
             <p class="form flex-center flex-column">
                 <label class="label">Where are you going?<input class="input city" type="text" placeholder="City"></label>
-                <label class="label">When are you arriving?<input class="input tripStart" type="text" placeholder="MM/DD/YY"></label>
-                <label class="label">When are you returning home?<input class="input tripEnd" type="text" placeholder="MM/DD/YY"></label>
+                <label class="label">When are you arriving?<input class="input tripStart" type="text" placeholder="MM/DD/YYYY"></label>
+                <label class="label">When are you returning home?<input class="input tripEnd" type="text" placeholder="MM/DD/YYYY"></label>
                 <button class="submit-button formSubmit"  onclick="setValues()"><a href="./advisor.html">Submit</a></button>
                 <button class="submit-button"><a href="#" rel="modal:close">Close</a></button>
             </p>
