add array of placeholder addresses, make code to print list of hotels and address to page

--- a/advisor.html
+++ b/advisor.html
@@ -53,7 +53,7 @@
         <!--/\ weather api widget /\-->
 
         <!--\/ trip advisor api \/-->
-
+        <div class="hotels"></div>
         <!--/\ trip advisor api /\-->
     </main>
         <div class="main"></div>
