minor syntax fixes

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/CSS/output.css">
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     <!-- npx tailwindcss -i ./assets/CSS/input.css -o ./assets/CSS/output.css --watch -->
     <title>Trip Planner</title>
 </head>
@@ -28,7 +29,7 @@
                 <label class="label">When are you arriving?<input class="input tripStart" type="text" placeholder="MM/DD/YYYY"></label>
                 <label class="label">When are you returning home?<input class="input tripEnd" type="text" placeholder="MM/DD/YYYY"></label>
                 <ul class="btnalign">
-                <li><button class="submit-button formSubmit"  onclick="setValues()"><a class="relative" href="./advisor.html">Submit</a></button></li>
+                <li><button class="submit-button formSubmit" onclick="setValues()"><a class="relative" href="./advisor.html">Submit</a></button></li>
                 <li><button class="submit-button"><a class="relative" href="#" rel="modal:close">Close</a></button></li>
             </ul>
             </p>
