--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         <form id="ex1" class="modal">
             <p class="form flex-center flex-column">
                 <label class="label">Where are you going?<input class="input city" type="text" placeholder="City"></label>
-                <label class="label">When are you arriving?<input class="input tripStart" type="text" placeholder="YYYY/MM/DD"></label>
-                <label class="label">When are you returning home?<input class="input tripEnd" type="text" placeholder="YYYY/MM/DD"></label>
+                <label class="label">When are you arriving?<input class="input tripStart" type="text" placeholder="MM/DD/YYYY"></label>
+                <label class="label">When are you returning home?<input class="input tripEnd" type="text" placeholder="MM/DD/YYYY"></label>
                 <ul class="btnalign">
                 <li><button class="submit-button formSubmit" onclick="setValues()"><a class="relative" href="./advisor.html">Submit</a></button></li>
                 <li><button class="submit-button"><a class="relative" href="#" rel="modal:close">Close</a></button></li>
