--- a/index.html
+++ b/index.html
@@ -9,20 +9,25 @@
     <title>Trip Planner</title>
 </head>
 <body>
+    <!-- \/ nav bar \/ -->
     <nav>
         <ul>
             <li><a href="advisor.html">Trip Planner</a></li>
         </ul>
     </nav>
+    <!-- /\ nav bar /\ -->
     <main>
 
+        <!-- \/ get started \/ -->
         <div class="container">
             <div class="flex-center flex-column">
                 <h1>Welcome To Trip Planner!</h1>
                 <button class="open-button"><a class="button" href="#ex1" rel="modal:open">Get Started!</a></button>
             </div>
         </div>
+        <!-- /\ get started /\ -->
 
+        <!-- \/ modal \/ -->
         <form id="ex1" class="modal">
             <p class="form flex-center flex-column">
                 <label class="label">Where are you going?<input class="input city" type="text" placeholder="City"></label>
@@ -34,6 +39,7 @@
             </ul>
             </p>
         </form>
+        <!-- /\ modal /\ -->
 
         <div class="main"></div>
     </main>
