--- a/advisor.html
+++ b/advisor.html
@@ -7,10 +7,13 @@
     <title>Trip Advisor</title>
 </head>
 <body>
+    <!-- \/ nav bar \/ -->
     <nav>
         <ul>
             <li><a href="index.html">Trip Planner</a></li>
         </ul>
+    </nav>
+    <!-- /\ nav bar /\ -->
     <main>
         <!--\/ weather api \/-->
         <div class="max-w-7xl mx-auto  px-4 sm:px-6 lg:py-24 lg:px-8">
@@ -51,10 +54,7 @@
             </div>
         </div>
         <!--/\ weather api widget /\-->
-
-        <!--\/ trip advisor api \/-->
         <div class="hotels"></div>
-        <!--/\ trip advisor api /\-->
     </main>
         <div class="main"></div>
     <script src="./assets/JS/advisor.js"></script>
